src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Has_Activity__c</fullName>
        <formula>IF( ISBLANK( LastActivityDate ) = FALSE, 1, NULL)</formula>
        <label>Has Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Products__c</fullName>
        <description>Does the prospect have products to sell?</description>
        <inlineHelpText>Does the prospect have products to sell?</inlineHelpText>
        <label>Has Products?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hours_to_Convert__c</fullName>
        <formula>(Converted_Date__c -  Created_Date_Time__c )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours to Convert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <description>How did the prospect hear about us?</description>
        <inlineHelpText>How did the prospect hear about us?</inlineHelpText>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising (Internet Retailer, eCommerce Times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google/Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hubspot_Score_Difference__c</fullName>
        <formula>Hubspot_Score__c  -  Initial_Hubspot_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between current Hubspot score and initialy Hubspot score.</inlineHelpText>
        <label>zMKT Hubspot Score Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Score__c</fullName>
        <label>zMKT Hubspot Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_State__c</fullName>
        <label>IP State</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Hubspot_Score__c</fullName>
        <label>zMKT Initial Hubspot Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is there a duplicate?</inlineHelpText>
        <label>BA Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDR_Rating__c</fullName>
        <description>LDR Rating</description>
        <inlineHelpText>LDR Rating</inlineHelpText>
        <label>LDR Rating</label>
        <picklist>
            <picklistValues>
                <fullName>00 - New Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 - LDR In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - SQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - AE Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - AE Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - DQ/NI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Follow Up Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - End Process/Nurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>86 - Bad Contact Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Landing_Page__c</fullName>
        <inlineHelpText>URL the client clicked on when signing up for the first trial</inlineHelpText>
        <label>MKT Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>Today() - DATEVALUE( CreatedDate )</formula>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment_Method__c</fullName>
        <description>When this lead was created, how was it assigned to an owner?  Populated by defaults and workflows but could be built more robustly</description>
        <label>zLead Assignment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned to Creator</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Round Robin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as existing lead (email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as existing lead (phone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as existing contact (email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as existing account (phone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrated from another user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition team lead (email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition team lead (phone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Count__c</fullName>
        <description>For reporting purposes only; not on layouts</description>
        <formula>1</formula>
        <inlineHelpText>For reporting purposes only; not on layouts</inlineHelpText>
        <label>REPORT Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Adam Seabrooke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admarketplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdRoll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon Seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Braintree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capterra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Junction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datanyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demandbase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecom Bytes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endicia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2crowd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Shopping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Happy Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Radius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instagram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luncheon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meet-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Unique_ID__c</fullName>
        <description>For reporting purposes: modifies the Salesforce ID to be a non case sensitive version so there are no duplicates in Excel</description>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <label>Lead Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MBAAccountID__c</fullName>
        <externalId>true</externalId>
        <label>MBA Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAClientID__c</fullName>
        <label>MBA Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAHostingID__c</fullName>
        <description>Old field that can&apos;t be deleted because it&apos;s called out in 2 apex classes</description>
        <label>zOLD MBAHostingID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Partner_ID__c</fullName>
        <label>MBA Partner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Phone_1__c</fullName>
        <label>MBA Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MBA_Phone_2__c</fullName>
        <label>MBA Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MBA_Phone_3__c</fullName>
        <label>MBA Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MBA_Referral_ID__c</fullName>
        <description>referral Id to be passed to the Opportunity per BAP-2988</description>
        <label>MBA Referral ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_UTM_Campaign__c</fullName>
        <description>Marketing UTM Campaign information populated from Hubspot</description>
        <inlineHelpText>Marketing UTM Campaign information populated from Hubspot</inlineHelpText>
        <label>MKT UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_UTM_Medium__c</fullName>
        <description>Marketing UTM Medium, populated from Hubspot</description>
        <inlineHelpText>Marketing UTM Medium, populated from Hubspot</inlineHelpText>
        <label>MKT UTM Medium</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_UTM_Source__c</fullName>
        <description>Marketing UTM Source populated from Hubspot</description>
        <inlineHelpText>Marketing UTM Source populated from Hubspot</inlineHelpText>
        <label>MKT UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Notes__c</fullName>
        <label>Manager Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Promotion__c</fullName>
        <inlineHelpText>This field describes a promotion given to a prospect to encourage them to upgrade from a free trial to a paid store.</inlineHelpText>
        <label>zMKT Promotion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <description>Fed from Hubspot with form information</description>
        <inlineHelpText>Populated from Hubspot?</inlineHelpText>
        <label>MKT Marketing Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Trial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zMost Recent Trial</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used to tell the assignment rules if they should fire. Mainly used in the MBA Integration so code can assign Partner Account as owner without lead being re-assigned via assignment rules</description>
        <label>No Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_English_Speaking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WFRs fire from this field</description>
        <label>Non English Speaking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_EEs__c</fullName>
        <description>This is a field populated from Hubspot to SalesforceThis is a field populated from Hubspot to Salesforce. Can be updated by a Sales rep</description>
        <inlineHelpText>This is a field populated from Hubspot to Salesforce. Can be updated by a Sales rep</inlineHelpText>
        <label>Number of Employees</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Products__c</fullName>
        <description>Hubspot AR-5170</description>
        <inlineHelpText>Populated from Hubspot form. Can be updated by a Sales rep.</inlineHelpText>
        <label>Number of Products</label>
        <picklist>
            <picklistValues>
                <fullName>0-1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,000-5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,000-25,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25,000 - 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Orion_Segment__c</fullName>
        <description>For Orion.</description>
        <label>zSBD Orion Segment</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <description>Comments for sales reps to include more details on why a lead is unqualified</description>
        <inlineHelpText>More detail on why the lead is Unqualified</inlineHelpText>
        <label>Unqualified Reason Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <description>Used to store other details. Long text field.</description>
        <inlineHelpText>Used to store other details. Long text field.</inlineHelpText>
        <label>Other Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <label>Owner Phone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>Owner:User.Department</formula>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pain_Points__c</fullName>
        <description>Current prospect pain points with existing solution</description>
        <inlineHelpText>Current prospect pain points with existing solution</inlineHelpText>
        <label>Pain Points</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>9/6/12 - changed field label from Partner Account to Partner Source to distinguish this field used by the Partner team from the Design Partner used by Conversion Sales. Left Field Name the same to keep API integrity. jw</description>
        <inlineHelpText>Designates if a partner of BigCommerce brought this lead to us</inlineHelpText>
        <label>z PAR Partner Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Engagement_Preference__c</fullName>
        <description>PAR Partner Engagement Preference</description>
        <formula>TEXT(Partner_Account__r.Engagement_Preference__c)</formula>
        <inlineHelpText>PAR Partner Engagement Preference</inlineHelpText>
        <label>z PAR Partner Engagement Preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Source_Country__c</fullName>
        <description>for reporting</description>
        <formula>Partner_Account__r.BillingCountry</formula>
        <inlineHelpText>Billing Country of the Partner Account</inlineHelpText>
        <label>zPAR Partner Source Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Source_ID__c</fullName>
        <description>Salesforce Account ID of the partner associated with the lead.</description>
        <formula>Partner_Account__r.Id</formula>
        <inlineHelpText>Salesforce Account ID of the partner associated with the lead.</inlineHelpText>
        <label>zPAR Partner Source ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Source_Owner_ID__c</fullName>
        <description>for reporting &amp; lead reassignment only</description>
        <formula>Partner_Account__r.OwnerId</formula>
        <label>z BA Partner Source Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <description>What is the client&apos;s persona? Can be updated by Hubspot or Sales rep.</description>
        <inlineHelpText>What is the client&apos;s persona? Can be updated by Hubspot or Sales rep.</inlineHelpText>
        <label>Persona</label>
        <picklist>
            <picklistValues>
                <fullName>Startup Suzy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator Owen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miderprise Marty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for deduping</inlineHelpText>
        <label>BA Phone Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Test_Group__c</fullName>
        <description>Was the most recent trial in a price test group?</description>
        <formula>IF(ISBLANK( Most_Recent_Trial__c) = FALSE,  Most_Recent_Trial__r.PricingTestGroup__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Was the most recent trial in a price test group?</inlineHelpText>
        <label>zMKT Pricing Test Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <inlineHelpText>Detail on Product Closed Lost Reason</inlineHelpText>
        <label>Closed Lost Product Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Freight Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product level shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Dropshipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple ship from and to location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Order Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back in Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCM/Channel Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring billing for subscription model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Map Pricing-minimum advertised pricing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_Revenue__c</fullName>
        <description>Populated from Hubspot form. Can be updated by a Sales rep.</description>
        <inlineHelpText>Populated from Hubspot form. Can be updated by a Sales rep.</inlineHelpText>
        <label>Projected Annual Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000 - $250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250,000 - $500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500,000 - $1,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000,000 - $2,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,000,000 - $5,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000,000 - $50,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000,000 +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Notes__c</fullName>
        <description>design referral program field</description>
        <inlineHelpText>Brief description of why this client is being referred to the designer.  If the budget field is $0, this note field is required.</inlineHelpText>
        <label>zReferral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Submission_Type__c</fullName>
        <description>design referral program field</description>
        <formula>TEXT(Design_Account__r.Referral_Submission_Type__c)</formula>
        <inlineHelpText>If submission type is &quot;Email&quot;, Salesforce will send the referral email once the budget and design account data is populated.  If type is &quot;Form&quot;, please click the form URL and fill in the necessary information</inlineHelpText>
        <label>zReferral Submission Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Orion_Consultation_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SBD Orion Consultation Requested by Customer</description>
        <inlineHelpText>SBD Orion Consultation Requested by Customer should be check by the Sales Rep which will note an Orion client who has requested a Consultation. Consultations are only available for clients whose SBD Orion Segment = HIGH.</inlineHelpText>
        <label>zSBD Orion Consultation Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBD_Referral_ID__c</fullName>
        <inlineHelpText>SBD partner unique ID</inlineHelpText>
        <label>zSBD Referral ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Store_ID_EXT__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID.</inlineHelpText>
        <label>SBD Indexed Store ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesVue__Salesvue_Add_To_Plan_Ids__c</fullName>
        <label>Salesvue Add To Plan Ids</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesVue__Salesvue_Plan_Status__c</fullName>
        <label>Salesvue Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesVue__Salesvue_Remove_From_Plan_Ids__c</fullName>
        <label>Salesvue Remove From Plan Ids</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesVue__Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Phone__c</fullName>
        <description>Reps are currently using, once we&apos;re on opportunities, let&apos;s wean off and encourage reps to create new contacts instead.</description>
        <label>Sales Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Notes__c</fullName>
        <label>Sales Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <label>Skype</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage - will be retired when we move to opportunities fully.</description>
        <inlineHelpText>Stage - will be retired when we move to opportunities fully.</inlineHelpText>
        <label>zStage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Un-Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing: New Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requalified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Partner__c</fullName>
        <description>Pulls the Strategic Partner field from the most recent trial</description>
        <formula>Most_Recent_Trial__r.Strategic_Partner__r.Name</formula>
        <inlineHelpText>Pulls the Strategic Partner field from the most recent trial</inlineHelpText>
        <label>zSBD Strategic Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportPin__c</fullName>
        <inlineHelpText>MBA account pin used to verify account access for cases</inlineHelpText>
        <label>zSupport Pin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_with_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether the record should be synced with Marketo. Marketo has a filter stored for BigCommerce to only look at records with this checkbox checked.</description>
        <label>Sync with Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Take_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Take ownership workflow for the dialer</description>
        <inlineHelpText>When checked, after save, will assign the Lead to Owner if Owned by The Bigcommerce Team and set the Stage to &apos;Engaged&apos;.</inlineHelpText>
        <label>Take Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <inlineHelpText>Cold: tried to contact but no connection
Warm: connected but needs work
Hot: came in from a good source and/or is progressing towards close</inlineHelpText>
        <label>Temperature</label>
        <picklist>
            <picklistValues>
                <fullName>Cold</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a testing lead? MANUALLY POPULATED</description>
        <inlineHelpText>Is this a testing lead? MANUALLY POPULATED</inlineHelpText>
        <label>BA Testing Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>